--- a/testing/library_test/FerrGraphNet.vcxproj
+++ b/testing/library_test/FerrGraphNet.vcxproj
@@ -141,7 +141,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\ferr_graphnet.h" />
+    <ClInclude Include="..\..\ferr_graphnet.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
